# pipes

./: .gitignore  .travis.ceh  .travis.main  .travis.yml  CHANGELOG.md  LICENSE  Pipes.hs  README.md  default.nix  laws.md  pipe.cabal  pipes.cabal  release.nix  shell.nix  stack.yaml
.github/workflows/: haskell.yml
Control/: Adapter.hs  Frame.hs  MFunctor.hs  PFunctor.hs  Pipe.hs  Proxy.hs
Control/Adapter/: Core.hs
Control/Frame/: Tutorial.hs
Control/IMonad/Trans/: Free.hs
Control/Monad/Trans/: Free.hs  Interact.hs
Control/Pipe/: Common.hs  Core.hs  Final.hs  Tutorial.hs
Control/Proxy/: Class.hs  Core.hs  Correct.hs  Extra.hs  Fast.hs  Go.hs  ListT.hs  Morph.hs  Pipe.hs  Prelude.hs  Synonym.hs  Trans.hs  Tutorial.hs  Util.hs
Control/Proxy/Core/: Correct.hs  Fast.hs
Control/Proxy/Prelude/: Base.hs  IO.hs  Kleisli.hs  Map.hs
Control/Proxy/Trans/: Codensity.hs  Either.hs  Identity.hs  Maybe.hs  Reader.hs  State.hs  Tutorial.hs  Writer.hs
Control/Proxy/Util/: Core.hs  Kleisli.hs  Map.hs
Data/: Closed.hs  Coroutine.hs  Pipe.hs
Data/Pipe/: Common.hs  IO.hs  Pure.hs
Pipes/: Core.hs  Internal.hs  Lift.hs  Prelude.hs  Tutorial.hs
benchmarks/: Common.hs  LiftBench.hs  PreludeBench.hs
benchmarks/Prelude/: Benchmarks.hs  Main.hs
src/: Pipes.hs
src/Pipes/: Core.hs  Internal.hs  Lift.hs  Prelude.hs  Tutorial.hs
tests/: Main.hs
