Name: pipes
Version: 1.0
Cabal-Version: >=1.10.1
Build-Type: Simple
License: GPL
License-File: LICENSE
Copyright: 2012 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Stability: Experimental
Bug-Reports: mailto:Gabriel439@gmail.com
Synopsis: Compositional pipelines
Description: \"Iteratees done right\".  This library implements iteratees\/enumerators\/enumeratees simply and elegantly, but uses different naming conventions.  'Pipe's are enumeratees and they define two categories where composition composes enumeratees with either 'Lazy' or 'Strict' semantics.  Enumerators and iteratees are just 'Pipe's with one end closed.
Category: Utils
Tested-With: GHC ==7.0.3

Library
    Build-Depends: base >= 4, mtl
    Exposed-Modules: Data.Pipe, Data.Pipe.Common
    GHC-Options: -O2
    Default-Language: Haskell2010
