Name: pipes
Version: 4.1.6
Cabal-Version: >= 1.10
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2012-2014 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Pipes-Library/issues
Synopsis: Compositional pipelines
Description:
  `pipes` is a clean and powerful stream processing library that lets you build
  and connect reusable streaming components
  .
  Advantages over traditional streaming libraries:
  .
  * /Concise API/: Use simple commands like 'for', ('>->'), 'await', and 'yield'
  .
  * /Blazing fast/: Implementation tuned for speed, including shortcut fusion
  .
  * /Lightweight Dependency/: @pipes@ is small and compiles very rapidly,
    including dependencies
  .
  * /Elegant semantics/: Use practical category theory
  .
  * /ListT/: Correct implementation of 'ListT' that interconverts with pipes
  .
  * /Bidirectionality/: Implement duplex channels
  .
  * /Extensive Documentation/: Second to none!
  .
  Import "Pipes" to use the library.
  .
  Read "Pipes.Tutorial" for an extensive tutorial.
Category: Control, Pipes
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Pipes-Library

Library
    Default-Language: Haskell2010

    HS-Source-Dirs: src
    Build-Depends:
        base         >= 4.4     && < 5  ,
        transformers >= 0.2.0.0 && < 0.5,
        mmorph       >= 1.0.0   && < 1.1,
        mtl          >= 2.1     && < 2.3

    Exposed-Modules:
        Pipes,
        Pipes.Core,
        Pipes.Internal,
        Pipes.Lift,
        Pipes.Prelude,
        Pipes.Tutorial
    GHC-Options: -O2 -Wall

Benchmark prelude-benchmarks
    Default-Language: Haskell2010
    Type:             exitcode-stdio-1.0
    HS-Source-Dirs:   benchmarks
    Main-Is:          PreludeBench.hs
    GHC-Options:     -O2 -Wall -rtsopts -fno-warn-unused-do-bind

    Build-Depends:
        base      >= 4.4     && < 5  ,
        criterion >= 0.6.2.1 && < 1.2,
        mtl       >= 2.1     && < 2.3,
        pipes     >= 4.0.0   && < 4.2

test-suite tests
    Default-Language: Haskell2010
    Type:             exitcode-stdio-1.0
    HS-Source-Dirs:   tests
    Main-Is:          Main.hs
    GHC-Options:      -Wall -rtsopts -fno-warn-missing-signatures -fno-enable-rewrite-rules

    Build-Depends:
        base                       >= 4.4     && < 5   ,
        pipes                      >= 4.0.0   && < 4.2 ,
        QuickCheck                 >= 2.4     && < 3   ,
        mtl                        >= 2.1     && < 2.3 ,
        test-framework             >= 0.4     && < 1   ,
        test-framework-quickcheck2 >= 0.2.0   && < 0.4 ,
        transformers               >= 0.2.0.0 && < 0.5

Benchmark lift-benchmarks
    Default-Language: Haskell2010
    Type:             exitcode-stdio-1.0
    HS-Source-Dirs:   benchmarks
    Main-Is:          LiftBench.hs
    GHC-Options:     -O2 -Wall -rtsopts -fno-warn-unused-do-bind

    Build-Depends:
        base         >= 4.4     && < 5  ,
        criterion    >= 0.6.2.1 && < 1.2,
        deepseq                         ,
        mtl          >= 2.1     && < 2.3,
        pipes        >= 4.0.0   && < 4.2,
        transformers >= 0.2.0.0 && < 0.5
